RESOLVED FIXED 251450
Prefix the SVGAnimationElement range setting methods with "set" instead of "calculate"
https://bugs.webkit.org/show_bug.cgi?id=251450
Summary Prefix the SVGAnimationElement range setting methods with "set" instead of "c...
Said Abou-Hallawa
Reported 2023-01-31 12:59:00 PST
We need to change the names of these methods: 1) calculateFromAndToValues() 2) calculateFromAndByValues() 3) calculateToAtEndOfDurationValue() And this will match the names of the SVGAttributeAnimator methods which are called by these methods.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-31 13:00:15 PST
Said Abou-Hallawa
Comment 2 2023-01-31 13:05:12 PST
EWS
Comment 3 2023-02-01 11:39:34 PST
Committed 259705@main (dd0930cde59d): <https://commits.webkit.org/259705@main> Reviewed commits have been landed. Closing PR #9401 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.