Prefix the SVGAnimationElement range setting methods with "set" instead of "calculate" https://bugs.webkit.org/show_bug.cgi?id=251450 rdar://104881126

Reviewed by Nikolas Zimmermann.

This will make the code more readable and the names of these methods will match
the names of the SVGAttributeAnimator methods which are called by these methods.

* Source/WebCore/svg/SVGAnimateElementBase.cpp:
(WebCore::SVGAnimateElementBase::setFromAndToValues):
(WebCore::SVGAnimateElementBase::setFromAndByValues):
(WebCore::SVGAnimateElementBase::setToAtEndOfDurationValue):
(WebCore::SVGAnimateElementBase::calculateFromAndToValues): Deleted.
(WebCore::SVGAnimateElementBase::calculateFromAndByValues): Deleted.
(WebCore::SVGAnimateElementBase::calculateToAtEndOfDurationValue): Deleted.
* Source/WebCore/svg/SVGAnimateElementBase.h:
* Source/WebCore/svg/SVGAnimateMotionElement.cpp:
(WebCore::SVGAnimateMotionElement::setFromAndToValues):
(WebCore::SVGAnimateMotionElement::setFromAndByValues):
(WebCore::SVGAnimateMotionElement::setToAtEndOfDurationValue):
(WebCore::SVGAnimateMotionElement::calculateToAtEndOfDurationValue): Deleted.
(WebCore::SVGAnimateMotionElement::calculateFromAndToValues): Deleted.
(WebCore::SVGAnimateMotionElement::calculateFromAndByValues): Deleted.
* Source/WebCore/svg/SVGAnimateMotionElement.h:
* Source/WebCore/svg/SVGAnimationElement.cpp:
(WebCore::SVGAnimationElement::startedActiveInterval):
(WebCore::SVGAnimationElement::updateAnimation):
* Source/WebCore/svg/SVGAnimationElement.h:

Canonical link: https://commits.webkit.org/259705@main